@@ -168,7 +168,7 @@ let () =
       I "sys/types.h"; I "sys/stat.h";
       I "unistd.h"; I "stdio.h";
       D "S_IFREG";
-      S "fstatat"; S "openat"; S "unlinkat"; S "renameat"; S "mkdirat";
+      S "fstatat"; S "openat"; S "unlinkat"; S "renameat"; S "mkdirat"; S "linkat"; S "symlinkat";
     ];
     "DIRFD", L[
       I "sys/types.h";
