@@ -47,13 +47,16 @@ external at_fdcwd : unit -> Unix.file_descr
 let at_fdcwd = at_fdcwd ()
 *)
 
-type at_flag = AT_EACCESS | AT_SYMLINK_NOFOLLOW | AT_REMOVEDIR
+type at_flag = AT_EACCESS | AT_SYMLINK_NOFOLLOW | AT_REMOVEDIR | AT_SYMLINK_FOLLOW
 external openat : Unix.file_descr -> string -> Unix.open_flag list -> Unix.file_perm -> Unix.file_descr = "caml_extunix_openat"
 external fstatat : Unix.file_descr -> string -> Unix.stats = "caml_extunix_fstatat"
 (** Supported flags : [AT_REMOVEDIR] *)
 external unlinkat : Unix.file_descr -> string -> at_flag list -> unit = "caml_extunix_unlinkat"
 external renameat : Unix.file_descr -> string -> Unix.file_descr -> string -> unit = "caml_extunix_renameat"
 external mkdirat : Unix.file_descr -> string -> int -> unit = "caml_extunix_mkdirat"
+(** Supported flags : [AT_SYMLINK_FOLLOW] *)
+external linkat : Unix.file_descr -> string -> Unix.file_descr -> string -> at_flag list -> unit = "caml_extunix_linkat"
+external symlinkat : string -> Unix.file_descr -> string -> unit = "caml_extunix_symlinkat"
 END
 
 HAVE UNAME
